Fix Google OAuth authorization and subscription flow
- Added missing database fields: email, profile_picture, avatar_url
- Fixed 500 error in getUserByEmail function
- Improved subscription redirect logic after payment
- Added automatic payment monitoring and dashboard redirect
- Updated auth flow to handle existing subscriptions properly

--- a/client/public/simple-login.html
+++ b/client/public/simple-login.html
@@ -174,8 +174,8 @@
                     
                     // Проверяем нужна ли подписка
                     if (data.needsSubscription) {
-                        console.log('User needs subscription, redirecting to choose-subscription');
-                        window.location.href = '/choose-subscription.html';
+                        console.log('User needs subscription, redirecting to subscriptions');
+                        window.location.href = '/subscriptions';
                     } else {
                         console.log('User has subscription, redirecting to dashboard');
                         window.location.href = '/dashboard';
