--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,11 @@
     <!-- Preconnect для безопасности external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://accounts.google.com" crossorigin>
+    
+    <!-- Google OAuth Client ID -->
+    <script>
+      window.GOOGLE_CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID';
+    </script>
   </head>
   <body>
     <div id="root"></div>
